--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,106 +1,158 @@
+:root {
+  --background: #101114;
+  --primary-color: #1c1d20;
+  --secondary-color: #4a4d57;
+  --accent-color: #00ffc4;
+  --text-color: #f9f9f9;
+}
 * {
   margin: 0;
   padding: 0;
-  font-family: "Poppins", sans-serif;
-  box-sizing: border-box;
 }
-
-.container {
-  width: 100%;
+html {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 16pt;
+  color: var(--text-color);
+}
+body {
   min-height: 100vh;
-  background: linear-gradient(135deg, #153677, #4e985f);
   padding: 10px;
-}
-
-.todo-app {
-  width: 100%;
-  max-width: 540px;
-  background: #fff;
-  margin: 100px auto 20px;
-  padding: 40px 30px 70px;
-  border-radius: 10px;
-}
-
-.todo-app h2 {
-  color: #002765;
+  background-color: var(--background);
   display: flex;
+  flex-direction: column;
   align-items: center;
+}
+h1 {
+  margin-top: 100px;
   margin-bottom: 20px;
+  font-size: 3rem;
+  font-weight: 800;
+  text-transform: uppercase;
+  text-align: center;
+  color: var(--accent-color);
 }
-
-.row {
+.todo-app {
+  width: 700px;
+  max-width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: #edeef0;
-  border-radius: 30px;
-  padding-left: 20px;
-  margin-bottom: 25px;
+  flex-direction: column;
+  gap: 10px;
 }
-
-input {
-  flex: 1;
-  border: none;
-  outline: none;
-  background: transparent;
-  padding: 10px;
-  font-weight: 14px;
+#input {
+  box-sizing: border-box;
+  padding: 12px 20px;
+  width: 100%;
+  background: none;
+  border: 2px solid var(--secondary-color);
+  border-radius: 1000px;
+  font: inherit;
+  color: var(--text-color);
+  caret-color: var(--accent-color);
 }
-
-button {
-  border: none;
+#input:focus {
   outline: none;
-  padding: 16px 50px;
-  background: #ff5945;
-  color: #fff;
-  font-size: 16px;
+}
+form {
+  position: relative;
+}
+#add {
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  background-color: var(--accent-color);
+  height: 100%;
+  padding: 0 30px;
+  border: none;
+  border-radius: 1000px;
+  font: inherit;
+  font-weight: 600;
+  color: var(--background);
   cursor: pointer;
-  border-radius: 40px;
 }
 
 .todo {
-  font-size: 17px;
-  padding: 12px 8px 12px 50px;
-  user-select: none;
+  margin-bottom: 10px;
+  padding: 0 16px;
+  background-color: var(--primary-color);
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+}
+.todo .todo-text {
+  padding: 15px;
+  padding-right: 0;
+  flex-grow: 1;
+  transition: 200ms ease;
+}
+.edit {
+  padding: 3px;
+  background: none;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
-  position: relative;
 }
-
-ul li::before {
-  content: "";
-  position: absolute;
-  height: 28px;
-  width: 28px;
+.edit svg {
+  transition: 200ms ease;
+}
+.edit:hover svg {
+  fill: #0073ff;
+}
+.delete {
+  padding: 3px;
+  background: none;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.delete svg {
+  transition: 200ms ease;
+}
+.delete:hover svg {
+  fill: #ff0033;
+}
+.custom-checkbox {
+  border: 2px solid var(--accent-color);
   border-radius: 50%;
-  background-image: url(./img/checked.png);
-  background-size: cover;
-  background-position: center;
-  top: 12px;
-  left: 8px;
+  min-height: 20px;
+  min-width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  transition: 200ms ease;
+  cursor: pointer;
 }
-
-ul li.checked {
-  color: #555;
+input[type="checkbox"]:checked ~ .custom-checkbox {
+  background-color: var(--accent-color);
+}
+input[type="checkbox"]:checked ~ .custom-checkbox svg {
+  fill: var(--primary-color);
+}
+input[type="checkbox"]:checked ~ .todo-text {
   text-decoration: line-through;
+  color: var(--secondary-color);
 }
-
-ul li.checked::before {
-  background-image: url(img/checked.png);
+input[type="checkbox"] {
+  display: none;
 }
-
-ul li span {
-  position: absolute;
-  right: 0;
-  top: 5px;
-  width: 40px;
-  height: 40px;
-  font-size: 22px;
-  color: #555;
-  line-height: 40px;
-  text-align: center;
-  border-radius: 50%;
-}
-
-ul li span:hover {
-  background: #edeef0;
+@media (max-width: 500px) {
+  html {
+    font-size: 12pt;
+  }
+  #add {
+    position: unset;
+    width: 100%;
+    margin-top: 10px;
+    padding: 15px;
+    height: auto;
+  }
+  h1 {
+    margin-top: 50px;
+    font-size: 15vw;
+  }
 }
