--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -38,7 +38,7 @@ h1 {
   flex-direction: column;
   gap: 10px;
 }
-#input {
+#new-todo input {
   box-sizing: border-box;
   padding: 12px 20px;
   width: 100%;
@@ -49,17 +49,16 @@ h1 {
   color: var(--text-color);
   caret-color: var(--accent-color);
 }
-#input:focus {
+#new-todo input:focus {
   outline: none;
 }
-form {
+#new-todo {
   position: relative;
 }
-#add {
+#submit {
   position: absolute;
   top: 0;
   right: 0;
-
   background-color: var(--accent-color);
   height: 100%;
   padding: 0 30px;
@@ -144,7 +143,7 @@ input[type="checkbox"] {
   html {
     font-size: 12pt;
   }
-  #add {
+  #submit {
     position: unset;
     width: 100%;
     margin-top: 10px;
